CS_SBOX_20150209_01/Metadata/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>New_Biz_Named_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 1/22/2014 for Phase2</description>
        <inlineHelpText>The New Biz Named Account Rep owns this Account.  There is no requirement for the New Biz Named Account Rep to do any activity on the Account in order to &quot;keep&quot; the account .  Each night, the New Biz Named Account Rep will overwrite the New Biz Rep field.</inlineHelpText>
        <label>New Biz Named Account Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>New Biz</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsNewBizNamedAccountRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Biz_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>This field shows the last New Biz Rep who has modified the Account or any related Contact, Opp, or Activity in the last 60 days.  The New Biz Named Account Rep, if there is one, will overwrite the New Biz Rep field each night.</inlineHelpText>
        <label>New Biz Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Biz_Sales_Territory__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>New Biz Sales Territory</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_of_Invoices__c</fullName>
        <formula>Invoice_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num of Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Opps__c</fullName>
        <formula>Opportunity_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num of Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS2010_Industry_Name__c</fullName>
        <label>OS2010 Industry Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldOwnership__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>OldOwnership</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Corporates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector (Central &amp; Local Government)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State-Owned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OneSource_Company_Name__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>OneSource Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneSource_Parent_Key_Id__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>OneSource Parent Key Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneSource_Parent_Name__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>OneSource Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneSource_Ultimate_Key_Id__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>OneSource Ultimate Key Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneSource_Verification_Date__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>OneSource Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <label>Opportunity Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Monitoring_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Other Monitoring Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>An outgoing communication has been made to the Prospect by Sales.</inlineHelpText>
        <label>PH2-Outreach Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Corporates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector (Central &amp; Local Government)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State-Owned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P_O_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 3/15/2013; From MS CRM</description>
        <label>P.O. Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Type__c</fullName>
        <formula>TEXT(Parent.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paydex__c</fullName>
        <description>Created by LM on 3/6/2014 for Phase2</description>
        <label>Paydex #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Additional_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Plan Additional Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/11/2013 for Phase 2 rollout</description>
        <label>Plan Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Database__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Plan Database</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Email_Fax_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Plan Email/Fax Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Premium_Data_Add_Ons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Plan Premium Data/Add-Ons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_ISIC_Rev4_Desc__c</fullName>
        <label>Primary ISIC Rev4 Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_ISIC_Rev4__c</fullName>
        <label>Primary ISIC Rev4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Monitoring_Subscription_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Print Monitoring Subscription Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Print Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuickShare_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>Indicator of  an account exclusive to LexisNexis. Cision may not propose QuickShare to this account without executive approval.</inlineHelpText>
        <label>QuickShare Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCN_Additional_Recurring_Client_Needs__c</fullName>
        <description>Added by LM on 5/13/2013 per Laura J request</description>
        <label>RCN: Additional Recurring Client Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCN_Client_Emails__c</fullName>
        <description>Added by LM on 3/18/2013; New for SFDC rollout</description>
        <label>RCN: Client Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCN_Clip_Format__c</fullName>
        <description>Added by LM on 3/18/2013; New for SFDC rollout</description>
        <label>RCN: Clip Format</label>
        <picklist>
            <picklistValues>
                <fullName>WMV (320x240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT (320x240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLV (320x240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPEG1 (320x240)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPEG2(720x480)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVI (720x480)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMV (720x480)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT (720x480)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLV (720x480)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCN_Incidental_Fee__c</fullName>
        <description>Added by LM on 3/18/2013; New for SFDC rollout</description>
        <label>RCN: Incidental Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See RCN: Recurring Client Needs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCN_Post_Location__c</fullName>
        <description>Added by LM on 3/18/2013; New for SFDC rollout</description>
        <label>RCN: Post Location</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision FTP Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client CisionPoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Link</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCN_Recurring_Client_Needs__c</fullName>
        <description>Added by LM on 2/7/2013; From NetSuite</description>
        <inlineHelpText>Specific client needs and order instructions that should be followed on all transactions for this client.</inlineHelpText>
        <label>RCN: Recurring Client Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Info_Exp_Date__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Renewal Info Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Info__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Renewal Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 11/4/2013 for Phase 2 rollout</description>
        <inlineHelpText>The Renewal Period is anytime in the period of time 90 days BEFORE the Renewal Due Date through 60 days AFTER the Renewal Due Date (or 60 days after after Closed Renewal).</inlineHelpText>
        <label>Renewal Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <label>Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Sales_Territory__c</fullName>
        <description>Added by LM on 2/6/2013; New for SFDC rollout</description>
        <inlineHelpText>The account&apos;s renewal tier (based on the annual renewal amount).</inlineHelpText>
        <label>Renewal Sales Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Value__c</fullName>
        <description>Added by LM on 2/7/2013; From MS CRM</description>
        <inlineHelpText>15 Month Rolling Value of all Current Renewal Opps</inlineHelpText>
        <label>PH2-Renewal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Named_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 1/22/2014 for Phase2</description>
        <label>Renewals Named Account Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Renewal</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsRenewalsNamedAccountRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Invoice_Contact_Email__c</fullName>
        <description>Created by LM on 9/4/2013 for Phase 1 rollout</description>
        <label>Required Invoice Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Required_Invoice_Contact_Name__c</fullName>
        <description>Created by LM on 9/4/2013 for Phase 1 rollout</description>
        <label>Required Invoice Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <picklist>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <picklistValues>
                <fullName>Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prompt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Same</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uplift</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_1_Year_Growth_Percent__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Sales 1 Year Growth (Percent)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_In_Native_Country_Currency__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Sales (In Native Country Currency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_In_USD__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Sales (In USD)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Last_Touched_Date__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Sales Last Touched Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Last_Touched_On__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>PH2-Sales Last Touched On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segmentation_Category__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>PH2-Segmentation Category</label>
        <picklist>
            <picklistValues>
                <fullName>AGENCY_MGMTCONSULT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCH_ENGINEER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANK_INVEST_FINANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSUMER_RTL_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDUCATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENERGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERTAINMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOSPITAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSURANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIBRARIES_AND_ARCHIVES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISC_MEDICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISC_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISC_LIB_ZOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OIL_MINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORGANIZATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHARMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUBLISHING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REALESTATE_CONTRACTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCIENCE_AERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECHNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVELHOTEL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShowID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Monitoring_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Social Media Monitoring CP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_Monitoring_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Social Media Monitoring Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_Monitoring_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Social Media Monitoring Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Newsroom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Social Newsroom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 3/25/2014 for Phase2</description>
        <label>State Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/6/2013; From MS CRM</description>
        <inlineHelpText>Federal Tax Exempt status of the Account</inlineHelpText>
        <label>Federal Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <description>Added by LM on 2/22/2013; From NetSuite</description>
        <label>Billing Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Assets_1_Year_Growth_Percent__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Total Assets 1 Year Growth (Percent)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Renewal_Value__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Total Renewal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Broadcast__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Total Spend (Broadcast)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Non_Broadcast__c</fullName>
        <description>Created by LM on 8/26/2013 for Phase 2 rollout</description>
        <label>Total Spend (Non-Broadcast)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/7/2013; From NetSuite</description>
        <inlineHelpText>Broadcast Clients that have undergone an extensive examination to determine if they warrant more attention than a normal client and are approved by Sales Management.</inlineHelpText>
        <label>VIP Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vocus_Account_Type__c</fullName>
        <description>Vocus Account Type</description>
        <label>Vocus Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vocus_Org_Id__c</fullName>
        <description>Vocus Org Id</description>
        <externalId>true</externalId>
        <label>Vocus Org Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vocus_SFDC_Account_ID__c</fullName>
        <description>Vocus SFDC Account ID</description>
        <externalId>true</externalId>
        <label>Vocus SFDC Account ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Employees__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>PH2-Web Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Under 1000 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 1000 Employees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Revenue__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>PH2-Web Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>Under 200Mil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 200Mil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Wire_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/29/2013 for Phase 2 rollout</description>
        <label>CPS Web/Wire Distribution</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>